--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NailLab – Arte e Tecnica delle Unghie</title>
   <style>
     body {
@@ -10,7 +11,7 @@
       margin: 0;
       padding: 0;
       background: #fff;
-      color: #333;
+      color: #000;
     }
     header {
       background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
@@ -45,9 +46,7 @@
       color: transparent;
     }
     p, li, a {
-      background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
-      -webkit-background-clip: text;
-      color: transparent;
+      color: #000;
     }
     footer {
       background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
@@ -62,10 +61,16 @@
       border-radius: 10px;
       margin-top: 1rem;
     }
+    .logo {
+      width: 120px;
+      display: block;
+      margin: 0 auto 1rem auto;
+    }
   </style>
 </head>
 <body>
   <header>
+    <img src="logo.png" alt="NailLab Logo" class="logo" />
     <h1>NailLab</h1>
     <p>Arte e Tecnica delle Unghie</p>
   </header>
@@ -75,7 +80,6 @@
     <a href="#nailart">Nail Art</a>
     <a href="#recensioni">Recensioni</a>
     <a href="#lookbook">Lookbook</a>
-    <a href="#pro">Area Pro</a>
     <a href="#contatti">Contatti</a>
   </nav>
 
@@ -90,6 +94,18 @@
         <li><strong>Trifasico:</strong> tre prodotti distinti che garantiscono risultati più resistenti e personalizzabili: gel base, gel costruttore e gel sigillante.</li>
       </ul>
       <p>Il gel trifasico richiede più tempo e precisione, ma offre maggiore durata. Il monofasico è più veloce, perfetto per lavori express o principianti.</p>
+    </div>
+    <div class="articolo">
+      <h3>Come Fare una Ricostruzione delle Unghie con Dual Form: Guida Passo-Passo</h3>
+      <p>Oggi vi spiego come fare una ricostruzione delle unghie usando le dual form. È super facile e il risultato è top!</p>
+      <ol>
+        <li><strong>Preparazione:</strong> pulizia mani, spinta cuticole, opacizzazione unghia.</li>
+        <li><strong>Primer:</strong> applicare uno strato sottile e lasciar asciugare.</li>
+        <li><strong>Dual form:</strong> scegliere misura, riempire di gel, posizionare e polimerizzare.</li>
+        <li><strong>Rimozione:</strong> togliere la dual form e rifinire con lima e buffer.</li>
+        <li><strong>Finitura:</strong> cleaner per lucidare, olio cuticole per idratare.</li>
+      </ol>
+      <p>Consiglio: precisione e tempi giusti di lampada per un risultato professionale!</p>
     </div>
   </section>
 
@@ -106,7 +122,6 @@
         <li>Ripeti su tutte le unghie alternando i colori pastello.</li>
         <li>Sigilla con top coat lucido.</li>
       </ol>
-      <p>Un look delicato, perfetto per la primavera o cerimonie!</p>
     </div>
   </section>
 
@@ -116,9 +131,7 @@
     <div class="recensione">
       <h3>Recensione: Gel Builder "Crystal Soft" di NailPro</h3>
       <p><strong>Valutazione:</strong> ⭐⭐⭐⭐☆</p>
-      <p>Il gel Crystal Soft ha una consistenza medio-densa, facile da modellare. Ottimo per bombature precise e allungamenti su cartina. Non cola e si autolivella bene. Tempi di polimerizzazione: 60 sec LED, 120 sec UV. Perfetto per professioniste intermedie e avanzate.</p>
-      <p><strong>Pro:</strong> trasparenza perfetta, ottima tenuta, odore leggerissimo.<br>
-      <strong>Contro:</strong> prezzo leggermente alto.</p>
+      <p>Il gel Crystal Soft ha una consistenza medio-densa, facile da modellare. Ottimo per bombature precise e allungamenti su cartina. Non cola e si autolivella bene. Tempi di polimerizzazione: 60 sec LED, 120 sec UV.</p>
     </div>
   </section>
 
@@ -127,14 +140,9 @@
     <p>Gallerie tematiche per lasciarsi ispirare da ogni stile e stagione.</p>
   </section>
 
-  <section id="pro">
-    <h2>🧑‍🎓 Area Pro</h2>
-    <p>Risorse per professionisti: corsi, interviste, gestione clienti, marketing e normative.</p>
-  </section>
-
   <section id="contatti">
     <h2>📩 Contatti</h2>
-    <p>Vuoi collaborare o fare una domanda? Scrivici a <a href="mailto:info@naillab.it">info@naillab.it</a></p>
+    <p>Vuoi collaborare o fare una domanda? Scrivici a <a href="mailto:bartolo.mancuso01@you.unipa.it">bartolo.mancuso01@you.unipa.it</a></p>
   </section>
 
   <footer>
