--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NailLab – Arte e Tecnica delle Unghie</title>
   <style>
     body {
@@ -11,13 +11,17 @@
       margin: 0;
       padding: 0;
       background: #fff;
-      color: #000;
+      color: #333;
     }
     header {
       background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
       padding: 2rem;
       text-align: center;
       color: white;
+    }
+    header img {
+      max-height: 100px;
+      margin-bottom: 1rem;
     }
     header h1 {
       margin: 0;
@@ -46,7 +50,7 @@
       color: transparent;
     }
     p, li, a {
-      color: #000;
+      color: #333;
     }
     footer {
       background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
@@ -61,16 +65,11 @@
       border-radius: 10px;
       margin-top: 1rem;
     }
-    .logo {
-      width: 120px;
-      display: block;
-      margin: 0 auto 1rem auto;
-    }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="NailLab Logo" class="logo" />
+    <img src="img/logo.png" alt="Logo NailLab">
     <h1>NailLab</h1>
     <p>Arte e Tecnica delle Unghie</p>
   </header>
@@ -95,18 +94,6 @@
       </ul>
       <p>Il gel trifasico richiede più tempo e precisione, ma offre maggiore durata. Il monofasico è più veloce, perfetto per lavori express o principianti.</p>
     </div>
-    <div class="articolo">
-      <h3>Come Fare una Ricostruzione delle Unghie con Dual Form: Guida Passo-Passo</h3>
-      <p>Oggi vi spiego come fare una ricostruzione delle unghie usando le dual form. È super facile e il risultato è top!</p>
-      <ol>
-        <li><strong>Preparazione:</strong> pulizia mani, spinta cuticole, opacizzazione unghia.</li>
-        <li><strong>Primer:</strong> applicare uno strato sottile e lasciar asciugare.</li>
-        <li><strong>Dual form:</strong> scegliere misura, riempire di gel, posizionare e polimerizzare.</li>
-        <li><strong>Rimozione:</strong> togliere la dual form e rifinire con lima e buffer.</li>
-        <li><strong>Finitura:</strong> cleaner per lucidare, olio cuticole per idratare.</li>
-      </ol>
-      <p>Consiglio: precisione e tempi giusti di lampada per un risultato professionale!</p>
-    </div>
   </section>
 
   <section id="nailart">
@@ -122,6 +109,7 @@
         <li>Ripeti su tutte le unghie alternando i colori pastello.</li>
         <li>Sigilla con top coat lucido.</li>
       </ol>
+      <p>Un look delicato, perfetto per la primavera o cerimonie!</p>
     </div>
   </section>
 
@@ -131,7 +119,9 @@
     <div class="recensione">
       <h3>Recensione: Gel Builder "Crystal Soft" di NailPro</h3>
       <p><strong>Valutazione:</strong> ⭐⭐⭐⭐☆</p>
-      <p>Il gel Crystal Soft ha una consistenza medio-densa, facile da modellare. Ottimo per bombature precise e allungamenti su cartina. Non cola e si autolivella bene. Tempi di polimerizzazione: 60 sec LED, 120 sec UV.</p>
+      <p>Il gel Crystal Soft ha una consistenza medio-densa, facile da modellare. Ottimo per bombature precise e allungamenti su cartina. Non cola e si autolivella bene. Tempi di polimerizzazione: 60 sec LED, 120 sec UV. Perfetto per professioniste intermedie e avanzate.</p>
+      <p><strong>Pro:</strong> trasparenza perfetta, ottima tenuta, odore leggerissimo.<br>
+      <strong>Contro:</strong> prezzo leggermente alto.</p>
     </div>
   </section>
 
