--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="Logo NailLab">
+    <img src="logo.png" alt="Logo NailLab">
     <h1>NailLab</h1>
     <p>Arte e Tecnica delle Unghie</p>
   </header>
